--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,8 @@
 .idea/**/dynamic.xml
 .idea/**/uiDesigner.xml
 .idea/**/dbnavigator.xml
+.idea/**/shelf
+.idea/**
 
 # Gradle
 .idea/**/gradle.xml
